# china-ecom-csv-encoding-fixer

./: LICENSE  README.md  action.yml  action_entry.py  csv_encoding_fixer.py  pyproject.toml  run-macos.command  run-windows.bat  test_csv_encoding_fixer.py
examples/: batch-audit.json
examples/batch-input/: jd.csv  taobao.csv
examples/batch-output/: jd.csv  taobao.csv
